--- a/react-demo-app/src/components/Video/VideoElements.css
+++ b/react-demo-app/src/components/Video/VideoElements.css
@@ -1,27 +1,5 @@
-.video-element-container {
-  position: relative;
-  height: 450px;
-  width: 600px;
-  overflow: hidden;
-  background-color: #f2f2f2;
-}
-
 .visibility-container {
   height: 100%;
-}
-
-.logo-container {
-  width: 100%;
-  display: flex;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 10;
-  background-color: #B8B8B8
 }
 
 .video-elements-card {
